# LaunchDesk

./: .gitignore  CMakeLists.txt  README.md  main.cpp
application/controllers/: DebugAppConsole.cpp  DebugAppConsole.h  DockController.cpp  DockController.h  ProfileController.cpp  ProfileController.h  ProfileData.h  ProfilePage.cpp  ProfilePage.h  WinConsole.cpp  WinConsole.h  WindowsConsole.cpp  WindowsConsole.h  debug.cpp  debug.h
application/platform/: WinHotkeyFilter.cpp  WinHotkeyFilter.h
application/ui/: LaunchDeskWindow.cpp  LaunchDeskWindow.h  NewActionWindowDialog.cpp  NewActionWindowDialog.h  NewProfileWindowDialog.cpp  NewProfileWindowDialog.h
core/: AppPickerWindow.cpp  AppPickerWindow.h  CommandTemplate.cpp  CommandTemplate.h  ConfigManager.cpp  ConfigManager.h  ContentConfig.h  ContentRow.cpp  ContentRow.h  ContentStorage.cpp  ContentStorage.h  ResourcePaths.cpp  ResourcePaths.h  WindowPlacement.cpp  WindowPlacement.h
resources/: appicon.rc  resources.qrc
resources/styles/: QCheckBox.qss  QFrame.qss  QLineEdit.qss  QListWidget.qss  QMenu.qss  QMenuBar.qss  QPushButton.qss  QPushButton_back.qss  QPushButton_icons.qss  QPushButton_viewed.qss  QWidget.qss
ui/helpers/: UIHelpers.cpp  UIHelpers.h
ui/windows/: AppPicker.cpp  AppPicker.h  Guide.cpp  Guide.h  LaunchDesk.cpp  LaunchDesk.h  Welcome.cpp  Welcome.h
